<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginEnd="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginStart="48dp"
        android:background="@drawable/common_card_background"
        android:clickable="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:paddingStart="10dp"
            android:text="@string/add_password_group"
            android:textColor="@color/title_color"
            android:textSize="20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginEnd="6dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginStart="6dp"
            android:background="@color/line_color" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/create_passwordGroup_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/edit_text_holo_light"
                android:gravity="center_vertical"
                android:hint="@string/add_password_group"
                android:inputType="text"
                android:maxLength="7"
                android:maxLines="1"
                android:paddingTop="10dp"
                android:textColor="@color/text_color"
                android:textSize="16sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginEnd="6dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginStart="6dp"
            android:background="@color/line_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/create_passwordGroup_cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/selector_item_function"
                android:clickable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:alpha="0.7"
                    android:gravity="center_vertical"
                    android:text="@string/cancel"
                    android:textColor="@color/item_function_text_color"
                    android:textSize="16sp" />
            </RelativeLayout>

            <View
                android:layout_width="0.7dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="6dp"
                android:layout_marginTop="6dp"
                android:background="@color/line_color" />

            <RelativeLayout
                android:id="@+id/create_passwordGroup_sure"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/selector_item_function"
                android:clickable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:alpha="0.7"
                    android:gravity="center_vertical"
                    android:text="@string/sure"
                    android:textColor="@color/item_function_text_color"
                    android:textSize="16sp" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="4dp" />

</RelativeLayout>
