...
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:background="#494949" />

    <ListView
        android:id="@+id/fragment_password_group_listView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_weight="1"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        android:listSelector="@drawable/selector_item_group" />

    <RelativeLayout
        android:id="@+id/fragment_password_group_add"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/selector_item_group"
        android:clickable="true">

        <View
...
