<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:focusable="false"
    android:paddingEnd="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingStart="10dp">

    <ImageView
        android:id="@+id/fragment_password_group_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/app_name"
        android:focusable="false"
        android:src="@drawable/arrow" />

    <TextView
        android:id="@+id/fragment_password_group_name"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:layout_toLeftOf="@+id/fragment_password_group_arrow"
        android:layout_toStartOf="@+id/fragment_password_group_arrow"
        android:ellipsize="end"
        android:focusable="false"
        android:gravity="center_vertical"
        android:textColor="#EEEEEE"
        android:textSize="17sp"
        android:maxLines="1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        android:layout_below="@+id/fragment_password_group_name"
        android:background="#494949"
        android:focusable="false" />

</RelativeLayout>
