...
            android:background="@drawable/button"
            android:enabled="false"
            android:text="@string/next"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/set_password_skip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:gravity="end"
...
